<resources>
    <string name="app_name">Practica3</string>

    <string name="welcome_text">Welcome to the Portales</string>
    <string name="welcome_description">Taqueria Los Portales is a quick, casual restaurant</string>
    <string name="button_start">get started!</string>

    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="terms">I have read and accept terms and conditions of The Portales</string>
    <string name="sing_in">Sing in</string>

    <string name="our_menu">Our Menu</string>
    <string name="cold_drinks">ANTOJITOS</string>
    <string name="hot_drinks">ESPECIALIDADES</string>
    <string name="sweets">COMBINATIONS</string>
    <string name="salties">TORTAS</string>
    <string name="combos">SOPAS</string>
    <string name="custom">DRINKS</string>



</resources>