<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="215dp"
        android:layout_height="65dp"
        android:src="@drawable/grupo1"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:inputType="text"
        android:hint="@string/name"
        android:layout_marginTop="@dimen/input_margin"/>

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:inputType="text"
        android:hint="@string/last_name"
        android:layout_marginTop="@dimen/input_margin"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:inputType="textEmailAddress"
        android:hint="@string/e_mail"
        android:layout_marginTop="@dimen/input_margin"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginTop="@dimen/input_margin"/>

    <CheckBox
        android:id="@+id/cb_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        android:layout_marginLeft="0dp"
        android:textStyle="italic"
        android:layout_marginTop="@dimen/input_margin"/>

    <Button
        android:id="@+id/btn_sing_in"
        android:layout_width="219dp"
        android:layout_height="40dp"
        android:background="@drawable/round_button"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/sing_in" />
</LinearLayout>